fix caption and figure spacing

--- a/stylesheets/blog-stylesheet.css
+++ b/stylesheets/blog-stylesheet.css
@@ -95,6 +95,21 @@ a:link {
   font-size: .75em;
 }
 
+figure {
+  margin-left: auto;
+  margin-right: auto;
+  display: inline-block;
+}
+
+figcaption {
+    display: block;
+    margin: auto;
+    font-style: italic;
+    font-size: 13px;
+    padding-bottom: 3px;
+    vertical-align: middle;
+}
+
 img.photo {
   display: block;
   margin-left: auto;
